QA: Fix pagination overflowing content when it contains a lot of items

--- a/scss/components/pagination.scss
+++ b/scss/components/pagination.scss
@@ -3,6 +3,8 @@
 // =============================================================================
 
 .pagination {
+  flex-wrap: wrap;
+
   .page-item {
     .page-link {
       width: rem-calc(44);
